[gd_scene load_steps=3 format=2]

[ext_resource path="res://MySql.gd" type="Script" id=1]
[ext_resource path="res://RunWindow.gd" type="Script" id=2]

[node name="WindowDialog" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 39
custom_constants/margin_top = 37
custom_constants/margin_left = 61
custom_constants/margin_bottom = 47

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 61.0
margin_top = 37.0
margin_right = 985.0
margin_bottom = 553.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 924.0
margin_bottom = 19.0
text = "Editing TableName"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 924.0
margin_bottom = 109.0
rect_min_size = Vector2( 80, 80 )

[node name="MenuButton" type="MenuButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 131.0
margin_bottom = 80.0
text = "Select Procedure"
flat = false
switch_on_hover = true

[node name="ParamContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 135.0
margin_right = 135.0
margin_bottom = 80.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 139.0
margin_right = 255.0
margin_bottom = 80.0
alignment = 1

[node name="Run Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 13.0
margin_right = 116.0
margin_bottom = 38.0
text = "Run procedure"

[node name="Close Window" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 42.0
margin_right = 116.0
margin_bottom = 67.0
text = "Close window"

[node name="Status Container" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 924.0
margin_bottom = 516.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Status Container"]
margin_left = 7.0
margin_top = 7.0
margin_right = 917.0
margin_bottom = 26.0
size_flags_vertical = 0
text = "Operation status: "
autowrap = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
script = ExtResource( 1 )

[connection signal="about_to_show" from="." to="." method="_on_WindowDialog_about_to_show"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Run Button" to="." method="_on_Run_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
